--- a/css/pidgies.css
+++ b/css/pidgies.css
@@ -14,18 +14,17 @@ body {
     margin: 0;
     background-color: #eee;
     text-align: center;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
 }
 
 header {
-    margin: 0;
-    height: 150px;
     background-color: #3667A9;
-    padding: 30px auto 30px auto;
     border-bottom: 1px solid #222;
+    padding: 10px;
+    height: 150px;
 }
 
-section.main-content {
+main {
     flex: 1;
     padding: 50px;
 }
@@ -35,24 +34,27 @@ footer {
     padding: 25px;
     height: 100px;
     border-top: 1px solid #222;
-    font-size: 0.75em;
+    font-size: 0.75rem;
     background-color: #FEC90B;
 }
 
 header > h1 {
-    padding: 0;
-    margin: 0;
-    font-size: 3em;
-    letter-spacing: 10px;
+    padding: 30px;
+    font-size: 3rem;
+    letter-spacing: 12px;
+    line-height: 0;
     color: #FEC90B;
-    text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
     font-family: 'PokemonFont';
+    text-shadow: 3px 3px 0 #033476,
+                 -3px 3px 0 #033476,
+                 3px -3px 0 #033476,
+                 -3px -3px 0 #033476;
 }
 
 input[type='number'] {
     width: 100px;
     height: 60px;
-    font-size: 3em;
+    font-size: 3rem;
     padding: 2px;
     text-align: center;
     background: transparent;
@@ -60,16 +62,16 @@ input[type='number'] {
     outline: none;
     box-shadow: none;
     border: none;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
 }
 
 label {
     display: block;
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 ul {
-    font-size: 2em;
+    font-size: 2rem;
     list-style: none;
 }
 
