--- a/css/pidgies.css
+++ b/css/pidgies.css
@@ -62,7 +62,7 @@ h1 > a {
     font-family: inherit;
 }
 
-input[type='number'] {
+input[type='tel'] {
     width: 125px;
     height: 65px;
     font-size: 4rem;
