--- a/css/pidgies.css
+++ b/css/pidgies.css
@@ -81,6 +81,13 @@ label {
     font-size: 3rem;
 }
 
+p.checkbox-label {
+    display: blcok;
+    font-size: 2rem;
+    font-family: unset;
+    text-align: center;
+}
+
 ul {
     font-size: 2rem;
     list-style: none;
@@ -142,6 +149,87 @@ p.faq {
     font-weight: bold;
 }
 
+.flipswitch-container {
+    width: 86px;
+    margin: auto;
+}
+
 p.faq-answer {
- padding-left: 20px;
+    padding-left: 20px;
+}
+
+.flipswitch {
+    position: relative;
+    width: 86px;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select: none;
+}
+.flipswitch input[type=checkbox] {
+    display: none;
+}
+.flipswitch-label {
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid #999999;
+    border-radius: 50px;
+}
+.flipswitch-inner {
+    width: 200%;
+    margin-left: -100%;
+    -webkit-transition: margin 0.3s ease-in 0s;
+    -moz-transition: margin 0.3s ease-in 0s;
+    -ms-transition: margin 0.3s ease-in 0s;
+    -o-transition: margin 0.3s ease-in 0s;
+    transition: margin 0.3s ease-in 0s;
+}
+.flipswitch-inner:before, .flipswitch-inner:after {
+    float: left;
+    width: 50%;
+    height: 24px;
+    padding: 0;
+    line-height: 24px;
+    font-size: 15px;
+    color: white;
+    font-family: Trebuchet, Arial, sans-serif;
+    font-weight: bold;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.flipswitch-inner:before {
+    content: "ON";
+    padding-left: 0px;
+    background-color: #3667A9;
+    color: #FEC90B;
+}
+.flipswitch-inner:after {
+    content: "OFF";
+    padding-right: 15px;
+    background-color: #EBEBEB;
+    color: #888888;
+    text-align: right;
+}
+.flipswitch-switch {
+    width: 28px;
+    margin: -2px;
+    background: #FFFFFF;
+    border: 1px solid #999999;
+    border-radius: 50px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 60px;
+    -webkit-transition: all 0.3s ease-in 0s;
+    -moz-transition: all 0.3s ease-in 0s;
+    -ms-transition: all 0.3s ease-in 0s;
+    -o-transition: all 0.3s ease-in 0s;
+    transition: all 0.3s ease-in 0s;
+}
+.flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
+    margin-left: 0;
+}
+.flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
+    right: 0;
 }
